renames yaml files, removes unused files, adds some tasks

--- a/linux-host-setup/tasks/main.yaml
+++ b/linux-host-setup/tasks/main.yaml
@@ -1,7 +1,8 @@
 ---
 - name: Set up repositories
-  ansible.builtin.apt_repository:
-    repo: "{{ item }}"
+  ansible.builtin.yum_repository:
+    name: "{{ item.name }}"
+    repo: "{{ item.url }}"
     state: present
   loop: "{{ repos }}"
 
@@ -29,7 +30,18 @@
     dest: "/home/{{ myuser }}/.zshrc"
 
 - name: Set up host entries
-  template:
+  ansible.builtin.template:
     src: "etc/hosts.j2"
     dest: "/etc/hosts"
 
+- name: Sets up dnf5 auto update
+  ansible.builtin.copy:
+    src: "systemd/dnf5-automatic.timer"
+    dest: "/usr/lib/systemd/system/dnf5-automatic.timer"
+  notify: "systemctl reload"
+
+- name: Enables dnf5 auto update
+  ansible.builtin.systemd_service:
+    name: dnf5-automatic.timer
+    state: started
+    enabled: true
