changes directory structure, includes fixes after testing

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,8 +2,8 @@
 host_key_checking = False
 timeout = 25
 inventory = ./inventory/
-vault_password_file=.vault_pass
 force_valid_group_names = ignore
+auto_install_module_deps = true
 
 [ssh_connection]
 ssh_args = -o ServerAliveInterval=30 -o ControlMaster=auto -o ControlPersist=60s
