--- a/roles/linux-host-setup/tasks/main.yaml
+++ b/roles/linux-host-setup/tasks/main.yaml
@@ -2,18 +2,25 @@
 - name: Set up repositories
   ansible.builtin.yum_repository:
     name: "{{ item.name }}"
-    repo: "{{ item.url }}"
+    baseurl: "{{ item.url }}"
+    description: "{{ item.description }}"
+    enabled: yes
     state: present
   loop: "{{ repos }}"
+  notify: dnf makecache
 
 - name: Install packages
   ansible.builtin.package:
     name: "{{ item }}"
     state: present
   loop: "{{ packages_to_install }}"
+  ignore_errors: True
 
 - name: Install oh-my-zsh
   shell: "{{ oh_my_zsh_install_command }}"
+  args:
+    creates: "/home/{{ myuser }}/.oh-my-zsh"
+  become_user: "{{ myuser }}"
 
 - name: Set up zsh as default shell for user
   ansible.builtin.user:
@@ -26,7 +33,7 @@
     dest: "/etc/vimrc"
 - name: Copy .zshrc
   ansible.builtin.copy:
-    src: ".zshrc"
+    src: "zshrc"
     dest: "/home/{{ myuser }}/.zshrc"
 
 - name: Set up host entries
@@ -38,7 +45,7 @@
   ansible.builtin.copy:
     src: "systemd/dnf5-automatic.timer"
     dest: "/usr/lib/systemd/system/dnf5-automatic.timer"
-  notify: "systemctl reload"
+  notify: "systemd reload"
 
 - name: Enables dnf5 auto update
   ansible.builtin.systemd_service:
